--- a/UTeM_EComplaint/UTeM_EComplaint/Views/Staff/StaffAddComplaintPage.xaml
+++ b/UTeM_EComplaint/UTeM_EComplaint/Views/Staff/StaffAddComplaintPage.xaml
@@ -18,17 +18,17 @@
                             <StackLayout>
                                 <Label Text="Complaint" Style="{StaticResource DetailTitle}"/>
                                 <Line X1="0" Y1="0" X2="360" Y2="0" Margin="0,0,0,20" HorizontalOptions="CenterAndExpand" Stroke="black"/>
-                                <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto" RowSpacing="30">
+                                <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto" RowSpacing="30">
                                     <!--Compaint Date-->
                                     <Label Grid.Row="0" Grid.Column="0" Text="Date" TextColor="#0FC5BA" FontSize="Medium"/>
                                     <Label Grid.Row="0" Grid.Column="1" Text="{Binding DateTimeString}"  TextColor="Black" FontSize="Small"/>
 
-                                        <!--Division-->
+                                    <!--Division-->
                                     <Label Grid.Row="1" Grid.Column="0" Text="Division" TextColor="#0FC5BA" FontSize="Medium"/>
-                                    <Picker Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" x:Name="bahagian" Title="-- Select Division --" 
+                                    <Picker Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Title="-- Select Division --" 
                                                 ItemsSource="{Binding divisionList}" SelectedItem="{Binding SelectedDivision}"
                                                 ItemDisplayBinding="{Binding DivisionName}" 
-                                                TextColor="Black" />        
+                                                TextColor="Black" />
                                     <!--Damage Type-->
                                     <Label Grid.Row="3" Grid.Column="0" Text="Damage Type" TextColor="#0FC5BA" FontSize="Medium"/>
                                     <Picker Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Title="-- Select Damage Type --" ItemsSource="{Binding damageTypeList}" 
@@ -38,22 +38,34 @@
                                     <Label Grid.Row="5" Grid.Column="0" Text="Category" TextColor="#0FC5BA" FontSize="Medium"/>
                                     <Picker Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Title="-- Select Category --" SelectedItem="{Binding SelectedCategory}"
                                                 ItemsSource="{Binding categoryList}" ItemDisplayBinding="{Binding CategoryName}"
-                                                TextColor="Black" />        
+                                                TextColor="Black" />
                                     <!--Damage-->
-                                    <Label Grid.Row="7" Grid.Column="0" Text="Problem Description" TextColor="#0FC5BA" FontSize="Medium"/>
-                                    <Editor Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Complaint.Damage}" AutoSize="TextChanges" FontSize="Small"/>
+                                    <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Text="Problem Description" TextColor="#0FC5BA" FontSize="Medium"/>
+                                    <Editor Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Complaint.Damage}" AutoSize="TextChanges"/>
 
                                     <!--Location-->
-                                    <Label Grid.Row="9" Grid.Column="0" Text="Location" TextColor="#0FC5BA" FontSize="Medium" />
-                                    <Entry Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Complaint.Location}" x:Name="location" FontSize="Small"/>
+                                    <Label Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" Text="Location/Department" TextColor="#0FC5BA" FontSize="Medium" />
 
+                                    <Button Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" Text="Add Location" Style="{StaticResource Button}" Command="{Binding AddLocationCommand}" IsVisible="{Binding IsNotLocation}"  />
+
+                                    <AbsoluteLayout Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All" IsVisible="{Binding IsLocation}" >
+                                        <StackLayout>
+                                            <Label Style="{StaticResource CardLabel}" Text="{Binding Location}" HorizontalTextAlignment="Start" />
+                                        </StackLayout>
+                                        <Image HeightRequest="50" AbsoluteLayout.LayoutBounds="1, 10, 25, 25"
+                                           AbsoluteLayout.LayoutFlags="PositionProportional"
+                                           Source="xmark.png" Aspect="AspectFit" >
+                                            <Image.GestureRecognizers>
+                                                <TapGestureRecognizer Command="{Binding ClearLocationCommand}"/>
+                                            </Image.GestureRecognizers>
+                                        </Image>
+                                    </AbsoluteLayout>
                                     <!--Contact Number-->
-                                    <Label Grid.Row="11" Grid.Column="0" Text="Contact number" TextColor="#0FC5BA" FontSize="Medium"/>
-                                    <Entry Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Complaint.ContactPhoneNumber}" x:Name="contact" FontSize="Small"/>
+                                    <Label Grid.Row="11" Grid.Column="0" Text="Contact number" TextColor="#0FC5BA" FontSize="Medium" />
+                                    <Entry Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Complaint.ContactPhoneNumber}" />
 
-                                    <Button Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="2" Text="Save" CharacterSpacing="3" BackgroundColor="#0FC5BA" CornerRadius="20"
-                            Command="{Binding SaveCommand}" FontSize="20" FontAttributes="Bold" HeightRequest="50"
-                            WidthRequest="200" HorizontalOptions="Center" VerticalOptions="EndAndExpand" Margin="3,14"/>
+                                    <Button Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="2" Text="Save" Style="{StaticResource Button}"
+                                    Command="{Binding SaveCommand}"/>
                                 </Grid>
                             </StackLayout>
                         </Frame>
