--- a/UTeM_EComplaint/UTeM_EComplaint/Views/Staff/StaffAddRatingPage.xaml
+++ b/UTeM_EComplaint/UTeM_EComplaint/Views/Staff/StaffAddRatingPage.xaml
@@ -26,13 +26,13 @@
 
                     <Label Text="Name" TextColor="#Black" FontSize="Medium"/>
                     <Frame>
-                        <Label Text="{Binding Complaint.Technician.TechnicianID}" FontSize="Small" TextColor="Black"/>
+                        <Label Text="{Binding Complaint.Technician.TechnicianName}" FontSize="Small" TextColor="Black"/>
                     </Frame>
                     <Label Text="Your rating will help us to improve our performance" TextColor="Black" HorizontalTextAlignment="Center" FontSize="Large"/>
                     <BoxView Margin="0,30"  Color="Gray" WidthRequest="200" HeightRequest="1"/>
                     <rating:SfRating Value="{Binding RatingValue, Mode=TwoWay}" Precision="Standard" ItemSpacing="10" ItemSize="50" HorizontalOptions="Center">
                         <rating:SfRating.RatingSettings>
-                            <rating:SfRatingSettings RatedStroke="Black" UnRatedFill="Gray"/>
+                            <rating:SfRatingSettings Style="{StaticResource RatingBaseSetting}"/>
                         </rating:SfRating.RatingSettings>
                     </rating:SfRating>
                     <Label Text="Thank you" FontSize="Large" FontAttributes="Bold" HorizontalOptions="Center" TextColor="Black"/>
